clusters/homelab/apps/owncloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: owncloud
  namespace: owncloud
  labels:
    app: owncloud
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: owncloud
